updated project page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>lynix/vcp @ GitHub</title>
+	<title>vcp - verbose cp @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -52,16 +52,30 @@
       verbose cp
     </div>
 
-    <p>Main Project Text.</p><h2>Dependencies</h2>
-<p>glibc</p>
-<h2>Install</h2>
-<p>These are the install instructions.</p>
-<h2>License</h2>
-<p>GNU General Public License, Version 3</p>
-<h2>Authors</h2>
-<p>lynix (lynix47@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>lynix (lynix47@gmail.com)<br/>      </p>
+    <p>vcp is a little tool that copies files and directories. Unlike 'cp' it prints
+    nice progress information in form of progress bars or percentage values.<br/>
+    Additionally, it has some nice little features like error handling and synchronous
+    writing.</p>
+
+
+    <h2>Features</h2>
+    <p><ul>
+      <li>nice progress information (bars/text)</li>
+      <li>error handling (skips failed files and continues)</li>
+      <li>prepended information gathering</li>
+    </ul></p>
+
+    <h2>Install</h2>
+    <p>Just grab the source from GitHub and build. I don't provide any packages yet,
+    but a PKGBUILD for Arch Linux and an ebuild for Gentoo (within the sources).<br/>
+    Note that there are no dependencies - except glibc, of course.</p>
+
+    <h2>License</h2>
+    <p>This program is released under the GNU General Public License, Version 3. For
+    detailed information see the file named LICENSE in the sources.</p>
+
+    <h2>Contact</h2>
+    <p>Author: lynix (lynix47@gmail.com), GnuPG key 4804CCA9 at keys.gnupg.net</p>
 
 
     <h2>Download</h2>
